[tool.poetry]
name = "python-static-site-generator"
version = "0.1.0"
description = "Following this project on Pluralsight. And yes, I prefer poetry instead of bare virtualenv."
authors = ["Michael Hinz <michael@hinz.no>"]

[tool.poetry.dependencies]
python = "^3.10"
docutils = "^0.18.1"
Markdown = "^3.3.6"
parso = "^0.8.3"
pytest = "^7.0.0"
pytest-json-report = "^1.4.1"
pytest-sugar = "^0.9.4"
PyYAML = "^6.0"
redbaron = "^0.9.2"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
